fixed overflow bug

--- a/styles/style.css
+++ b/styles/style.css
@@ -5,6 +5,10 @@ body {
 	width: 100%;
 	font-family: "Roboto", sans-serif;
 	background-color: rgb(0, 12, 29);
+	position: absolute;
+	right: 0px;
+	left: 0px;
+	overflow-x: hidden;
 }
 
 a {
@@ -156,10 +160,6 @@ button {
 }
 
 @media (max-width: 800px) {
-	body {
-		overflow-x: hidden;
-	}
-
 	.front {
 		max-width: 100%;
 	}
